fix bugs on modal size on mobile screen

--- a/src/queries.css
+++ b/src/queries.css
@@ -171,15 +171,17 @@
   }
 
   .modal--container {
-    padding: 3rem;
+    padding: 5rem 3rem 3rem 3rem;
     font-size: 3rem;
+    gap: 3.6rem;
   }
 
   .modal__setting {
     gap: 2rem;
   }
+
   .modal__close--btn {
-    top: 1%;
+    top: 0.5%;
     right: 0.5%;
     font-size: 3rem;
   }
@@ -190,6 +192,10 @@
   }
 
   .modal__records {
+    font-size: 2.4rem;
+  }
+
+  .footer--list {
     font-size: 1.4rem;
   }
 }
@@ -199,7 +205,21 @@
     font-size: 5.2rem;
   }
 
+  .modal--container {
+    padding: 5rem 3rem 3rem 3rem;
+    font-size: 2.4rem;
+    gap: 3rem;
+  }
+
   .card--icon {
     font-size: 5.2rem;
+  }
+
+  .modal__records {
+    font-size: 1.6rem;
+  }
+
+  .footer--list {
+    font-size: 1rem;
   }
 }
